...
                          ref
                              .read(flutterRunnerServiceProvider)
                              .run(selectedConfig);
                        }
                      : null,
                  tooltip: 'Run',
                  key: const Key('run_app_button'),
                )
              else if (runnerState == RunnerState.connecting)
                const SizedBox(
                  width: 32,
                  height: 32,
                  child: Padding(
...
        ),
        // Terminal View
        Expanded(
          child: activeSession != null
              ? TerminalView(
                  activeSession.terminal,
                  key: const Key('runner_terminal_view'),
                  controller: activeSession.controller,
                  theme: VSCodeTerminalTheme.theme,
                  textStyle: const TerminalStyle(fontSize: 12),
                )
              : Center(
                  child: InkWell(
...
                      padding: const EdgeInsets.all(32.0),
                      child: Column(
                        mainAxisAlignment: MainAxisAlignment.center,
                        mainAxisSize: MainAxisSize.min,
                        children: [
                          Icon(Icons.play_circle_outline,
                              key: const Key('run_app_center_button'),
                              size: 48,
                              color: selectedConfig != null
                                  ? Colors.green.withOpacity(0.8)
                                  : Colors.white24),
                          const SizedBox(height: 16),
                          Text(
...
